<resources>

    <string name="app_name">Cashin</string>
    <string name="balance">Account Balance</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">StudentBudgetApp</string>
    <string name="save">Save</string>
    <string name="transactions">Transactions</string>
    <string name="name">Name</string>
    <string name="title_activity_manage_category">ManageCategoryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_temporaryactivity">Temporaryactivity</string>
    <string name="title_activity_home_screen_host">Cashin</string>
    <string name="switchsucceded">SwitchSucceded</string>
    <string name="title_activity_budget_edit">BudgetEditActivity</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="value">Value</string>
    <string name="remove">Remove</string>
    <string name="title_activity_transaction_list_acitvity">TransactionListAcitvity</string>
    <string name="title_activity_transaction_list">TransactionListActivity</string>
    <string name="add_new_budget_item">Add new budget item</string>
    <string name="your_budget">Your Budget</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="title_activity_homescreen_fragment">HomescreenFragment</string>
    <string name="large_text">Large Text</string>
    <string name="edit_balance">Edit Balance</string>
    <string name="percentage">Percentage</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="addTransaction">Add New Transaction</string>
    <string name="plus">+</string>
    <string name="addDate">Add Date</string>
    <string name="medium_text">medium_text</string>
    <string name="manage_categories">manage_Categories</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="set_date">Set date</string>
    <string name="Save_balance">save_balance</string>
    <string name="chooseCategory">Choose Category</string>
    <string name="removeText">X</string>
    <string name="account_balance_over_time">Account balance over time</string>
    <string name="your_account_balance">Current account balance</string>
    <string name="left_to_spend_this_month">Left to spend this month</string>

</resources>