<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/budgetEditIncomeSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/income" />

        <Button
            android:id="@+id/budgetEditExpensesSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/expenses" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/budgetItemEditBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc" >

        <Button
            android:id="@+id/budgetItemEditBarEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/budgetItemEditDoneBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:visibility="gone" >

        <Button
            android:id="@+id/budgetItemEditBarEditDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/your_budget"
        android:textSize="24dp"
        android:gravity="center" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
                
        <LinearLayout
            android:id="@+id/budgetItemListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</LinearLayout>