<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.09" >

        <TextView
            android:id="@+id/Balancefield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="79dp"
            android:text="@string/large_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="60dp" />

        <Button
            android:id="@+id/homeScreenAddTransactionButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/addTransaction" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Balancefield"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp" />

        <TextView
            android:id="@+id/progressFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:text="@string/medium_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>